--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>zaky</groupId>
     <artifactId>Driver</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,4 +20,11 @@
             <version>4.11</version> <!-- Or whatever JUnit you're using. -->
         </dependency>
     </dependencies>
+<distributionManagement>
+   <repository>
+     <id>github</id>
+     <name>GitHub OWNER Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/Zaky-Git/tesc</url>
+   </repository>
+</distributionManagement>
 </project>
