--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,4 +39,5 @@ jobs:
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy -s settings.xml
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ github.token }}
